Update Wraithfang implicit